--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Dashboard/NewSale.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Dashboard/NewSale.cshtml
@@ -186,13 +186,14 @@
                         })
 
                         sale.id_client = 0;
-                        $("#identification").val('')
+                        $("#identification").val('');
                         return;
                     }
 
                     let client = JSON.parse(resp);
                     sale.id_client = client.id_client;
                     $("#names").val(client.full_name);
+                    $("#names").focus();
                 },
                 error: (err) => { console.log(err); return undefined; }
             });
@@ -222,7 +223,7 @@
 
         $("#btnAgregarProd").click(function () {
             if (sale.id_client == 0) {
-                swal.fire("Cliente no válido", "Por favor, seleccione el cliente para continuar.");
+                swal.fire("Cliente no válido", "Por favor, ingrese la cédula del cliente para continuar.");
                 return;
             }
 
@@ -246,6 +247,13 @@
             findClient();
         });
 
+        $("#identification").keypress(function (event) {
+            var keycode = (event.keyCode ? event.keyCode : event.which);
+            if (keycode == '13') {
+                findClient();
+            }
+        });
+
         $("#frmSale").submit(function (e) {
             e.preventDefault();
 
@@ -254,7 +262,40 @@
                 return;
             }
 
+            $.ajax({
+                url: `${base_url}Customer/Get?identification=${identification}`,
+                type: 'POST',
+                contentType: 'application/json',
+                success: function (resp) {
+                    if (resp == null) {
+                        Swal.fire({
+                            title: 'Notificación',
+                            text: 'El cliente con identificación ' + identification + ' no existe ¿Desea registrarlo?',
+                            icon: 'warning',
+                            showCancelButton: true,
+                            confirmButtonColor: '#3085d6',
+                            cancelButtonColor: '#d33',
+                            confirmButtonText: 'Sí'
+                        }).then((result) => {
+                            if (result.isConfirmed) {
 
+                            }
+                        })
+
+                        sale.id_client = 0;
+                        $("#identification").val('');
+                        return;
+                    }
+
+                    let client = JSON.parse(resp);
+                    sale.id_client = client.id_client;
+                    $("#names").val(client.full_name);
+                    $("#names").focus();
+                },
+                error: (err) => { console.log(err); return undefined; }
+            });
         });
+
+        $("#identification").focus();
     </script>
 }
