--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_DashboardLayout.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_DashboardLayout.cshtml
@@ -98,6 +98,11 @@
                                 </a>
                             </li>
                             <li>
+                                <a href='@Url.Action("NewCustomer", "Customer")'>
+                                    <i data-feather="users"></i> <span>Clientes</span>
+                                </a>
+                            </li>
+                            <li>
                                 <a href='@Url.Action("Index", "User")'>
                                     <i data-feather="users"></i> <span>Usuarios</span>
                                 </a>
