--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Dashboard/SalesReport.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Dashboard/SalesReport.cshtml
@@ -71,6 +71,7 @@
                         <tr>
                             <th scope="col">FECHA</th>
                             <th scope="col">Nº PEDIDO</th>
+                            <th scope="col">TIPO VENTA</th>
                             <th scope="col">USUARIO</th>
                             <th scope="col">TOTAL</th>
                         </tr>
@@ -85,13 +86,6 @@
 <script>
 
     $(document).ready(function () {
-        //let report_sales = getDailyReport();
-        //console.log(report_sales);
-        //$("#total_mis_ventas").text(`$${parseFloat(report_sales.total).toFixed(2)}`);
-        //$("#total_entregas").text(report_sales.successful_deliveries);
-
-
-        /*let dayli_report_items = report_sales.items;*/
         tbl_sales_report = $("#tbl_sales_report").DataTable({
             "language": {
                 "url": base_url + "/datatables.net/datatables-es_es.json"
@@ -106,6 +100,7 @@
             columns: [
                 { data: 'date' },
                 { data: 'number' },
+                { data: 'sale_type' },
                 { data: 'user_delivery' },
                 { data: 'total_item', render: $.fn.dataTable.render.number(',', '.', 2, '') },
             ],
@@ -154,7 +149,6 @@
                 Swal.fire('Notificación', 'Por favor, seleccione la fecha de inicio y fin para consultar las ventas.', 'warning');
                 return;
             }
-
 
             updateOrdersTable(start_date, end_date);
         });
