--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_DashboardLayout.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_DashboardLayout.cshtml
@@ -26,7 +26,7 @@
 </head>
 <body>
     <script>
-        //var base_url = 'http://localhost/Pesca';
+        //var base_url = 'http://localhost/Pesca/';
         var base_url = 'http://localhost:12681/';
         
         const logout = () => {
@@ -98,7 +98,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href='@Url.Action("NewCustomer", "Customer")'>
+                                <a href='@Url.Action("Index", "Customer")'>
                                     <i data-feather="users"></i> <span>Clientes</span>
                                 </a>
                             </li>
