Se quita responsabilidad de asignar pedidos a repartidores y se prepara la vista donde se asignarán los pedidos

--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_DashboardLayout.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_DashboardLayout.cshtml
@@ -81,6 +81,12 @@
                             </li>
 
                             <li>
+                                <a href='@Url.Action("Orders", "Dashboard")'>
+                                    <i data-feather="book-open"></i> <span>Pedidos</span>
+                                </a>
+                            </li>
+
+                            <li>
                                 <a href='@Url.Action("NewSale", "Dashboard")'>
                                     <i data-feather="dollar-sign"></i> <span>Nueva Venta</span>
                                 </a>
@@ -116,11 +122,7 @@
                                 </a>
                             </li>
 
-                            <li>
-                                <a href='@Url.Action("Index", "Delivery")'>
-                                    <i data-feather="book-open"></i> <span>Pedidos</span>
-                                </a>
-                            </li>
+
 
                             <li>
                                 <a href='@Url.Action("DailyReport", "Delivery")'>
