Validación de cedula en creacion de nueva cuenta y creacion de clientes

--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Customer/NewCustomer.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Customer/NewCustomer.cshtml
@@ -68,7 +68,12 @@
             email: user.email.value,
             contact: user.phone.value
         }
-        
+
+        if (!EsCedulaValida(user_register.identification)) {
+            Swal.fire('Notificación', 'La cédula ingresada no es válida.', 'warning');
+            return;
+        }
+
         if (!$("#frmRegistrarme").valid()) {
             return;
         }
