--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Dashboard/Index.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Dashboard/Index.cshtml
@@ -36,7 +36,7 @@
     <div class="col-sm-12">
         <div class="box">
             <div class="box-head">
-                <h2>Nuevos Pedidos</h2>
+                <h2>Pedidos</h2>
             </div>
             <div class="item">
                 <div class="item-responsive ">
