--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Dashboard/Index.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Dashboard/Index.cshtml
@@ -30,13 +30,24 @@
             console.log(order_list);
             tbl_order_list.clear().rows.add(order_list).draw();
         }
+
+        const showPDF = (idOrder) => {
+            $("#pdf_receipt").removeAttr("src");
+            //remove content iframe
+            var frame = document.getElementById("pdf_receipt"),
+                frameDoc = frame.contentDocument || frame.contentWindow.document;
+            frameDoc.removeChild(frameDoc.documentElement);
+
+            $("#pdf_receipt").attr('src', base_url + '/Dashboard/GetPdf?idOrder=' + idOrder);
+            $("#pdf-modal").modal();
+        }
     </script>
 }
 <div class="row" style="margin-top:2rem">
     <div class="col-sm-12">
         <div class="box">
             <div class="box-head">
-                <h2>Pedidos</h2>
+                <h2>Resumen Pedidos</h2>
             </div>
             <div class="item">
                 <div class="item-responsive ">
@@ -47,6 +58,7 @@
                                 <th scope="col">Nº</th>
                                 <th scope="col">FECHA/HORA</th>
                                 <th scope="col">TOTAL</th>
+                                <th scope="col"></th>
                                 <th scope="col">ESTADO</th>
                             </tr>
                         </thead>
@@ -58,6 +70,27 @@
         </div><!--/.box-->
     </div><!--/.col-->
 </div><!--/.row-->
+
+
+<div class="modal fade" id="pdf-modal" tabindex="-1" role="dialog" aria-labelledby="product-modalTitle" aria-hidden="true" data-id="">
+    <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Detalle de pedido</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col-12">
+                        <iframe id="pdf_receipt" src="" style="transform-origin: 0px 0px 0px; width: 100%; height: 700px;"></iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 <script>
 
 
@@ -76,12 +109,13 @@
                 { data: 'number' },
                 { data: 'date' },
                 { data: 'total_amount', render: $.fn.dataTable.render.number(',', '.', 2, '') },
-                { data: 'id_stage' },
+                { data: 'id_order' },
+                { data: 'id_stage' }
             ],
             "columnDefs": [
                 { "targets": 0, "visible": false, "searchable": false },
                 {
-                    targets: 4,
+                    targets: -1,
                     data: 'items',
                     "render": function (item, type, row, meta) {
                         if (item == 1) {
@@ -98,6 +132,13 @@
 
                     }
                 },
+                {
+                    targets: 4,
+                    data: 'id_order',
+                    "render": function (id_order, type, row, meta) {
+                        return '<button class="btn btn-danger btn-sm " onclick="showPDF(' + id_order + ')">PDF</button>';
+                    }
+                }
             ]
         });
     });
