Se permite cancelar el pedido al cliente; Se muestran en dashboard solo nuevos pedidos por asignar

--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Dashboard/Orders.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Dashboard/Orders.cshtml
@@ -10,7 +10,7 @@
         const getDeliveryList = () => {
             var datos = [];
             $.ajax({
-                url: base_url + '/Delivery/GetAll',
+                url: base_url + '/Delivery/GetAssignmentPending',
                 async: false,
                 type: 'POST',
                 contentType: 'application/json',
