--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Order/Processing.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Order/Processing.cshtml
@@ -21,7 +21,7 @@
                                             <thead class="bg-black text-white">
                                                 <tr>
                                                     <th>PRODUCTO</th>
-                                                    <th>CANTIDAD</th>
+                                                    <th class="text-center">CANTIDAD</th>
                                                     <th>PRECIO</th>
                                                 </tr>
                                             </thead>
@@ -30,7 +30,7 @@
                                                 {
                                                     <tr>
                                                         <td>@item.name</td>
-                                                        <td>@item.quantity</td>
+                                                        <td class='text-center'>@item.quantity</td>
                                                         <td class="text-right">@item.price</td>
                                                     </tr>
                                                 }
@@ -66,6 +66,10 @@
                         <p>Preparamos tu pedido con los más altos estándares de seguridad e higiene.</p>
                     </div>
                 </div>
+
+                <div class="text-right">
+                    <button id="btnCancelOrder" class="btn btn-danger" type="button">CANCELAR PEDIDO</button>
+                </div>
             </div>
         </div>
     </div>
@@ -74,6 +78,7 @@
     $("#btnOk").click(function () {
         UpdateStage();
     });
+
     const urlParams = new URLSearchParams(window.location.search);
     const ir_order = urlParams.get('id_order');
 
@@ -114,6 +119,61 @@
 
     $(document).on("click", "#logout", function () {
         window.location.href = base_url;
+    });
+
+    $("#btnCancelOrder").click(function () {
+
+        Swal.fire({
+            title: '¿Está seguro?',
+            text: "Su pedido será cancelado",
+            icon: 'warning',
+            showCancelButton: true,
+            confirmButtonColor: '#3085d6',
+            cancelButtonColor: '#d33',
+            confirmButtonText: 'Sí',
+            cancelButtonText: 'No'
+        }).then((result) => {
+            if (result.isConfirmed) {
+                $("#loader").fadeIn();
+
+                let cancel = {
+                    IdOrder: ir_order,
+                    IdStage: 5,
+                    Reason: "Cancelado por el cliente"
+                };
+
+                $.ajax({
+                    url: base_url + '/Order/CancelOrder',
+                    type: 'POST',
+                    data: JSON.stringify(cancel),
+                    dataType: 'json',
+                    contentType: 'application/json',
+                    success: function (response) {
+                        $("#loader").fadeOut();
+                        let resp = response;
+
+                        if (resp.code === '000') {
+                            connection.invoke("NotifyOrder");
+                            Swal.fire({
+                                title: "Mensaje",
+                                text: "Se ha procesado la cancelación de la entrega.",
+                                type: "success"
+                            }).then(function () {
+                                window.location = base_url;
+                            });
+                        } else {
+                            Swal.fire('Notificación', 'No se pudo procesar la cancelación.', 'error');
+                        }
+                    },
+                    error: function () {
+                        $("#loader").fadeOut();
+                        Swal.fire('Notificación', 'Lo sentimos, no se pudo completar la autenticación.', 'error');
+                    }
+                });
+
+            }
+        })
+
     });
 </script>
 @section Scripts{
