Se establece como disponible al repartidor cuando cancela el pedido el o el cliente

--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Dashboard/Orders.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Dashboard/Orders.cshtml
@@ -88,7 +88,7 @@
 }
 <div style="margin-top: 3rem; padding: 3rem;" class="panel panel-default min-h-75">
     <div class="box-head">
-        <h2>Nuevos Pedidos</h2>
+        <h2>Nuevos Pedidos Pendientes de Asignación</h2>
     </div>
     <div class="row">
         <div class="col-12" style="margin-top:2rem; padding:1rem;">
